# rapidhash

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: code_quality.yml  release.yml
docs/: index.md
scripts/: benchmark.py  benchmark_curve.py
src/: lib.rs  rapidhash.rs
src/rapidhash/: __init__.py  _core.pyi
tests/: test_avalance_effect.py  test_chi_square.py  test_correct_cases.py
